# manin-math-pad

./: .gitignore  README.md  pyproject.toml
manim_math_pad/: admin.py  apps.py  cli.py  models.py  urls.py  views.py
manim_math_pad/engine/: __init__.py  chat_service.py  lesson_planner.py  renderer.py  scene_generator.py  storyboard_generator.py  vault_exporter.py  zettel_generator.py
manim_math_pad/management/commands/: manim_scene.py  process_render_queue.py  render_status.py  run_render_daemon.py
manim_math_pad/migrations/: 0001_initial.py  0002_alter_animation_status.py  0003_animation_storyboards.py  0004_session_hidden_at.py
manim_math_pad/schemas/: lesson.schema.json
manim_math_pad/templates/manim_math_pad/: base.html  chat.html
manin_math_pad/: apps.py  models.py  urls.py  views.py
manin_math_pad/engine/: __init__.py  renderer.py  scene_generator.py  zettel_generator.py
manin_math_pad/management/commands/: manim_scene.py  process_render_queue.py  render_status.py
manin_math_pad/templates/manin_math_pad/: base.html  chat.html
tests/: conftest.py  test_api.py  test_cli.py  test_engine.py  test_urls.py
