[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-math-pad"
version = "0.1.0"
description = "Chat-driven math concept animator using Manim, with Obsidian zettel cluster export"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "manim>=0.18",
    "pyyaml>=6.0",
]

[project.scripts]
manim-pad = "manim_math_pad.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
